Adjusted alignment of toolbar items

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1649,7 +1649,7 @@ input[type="number"] {
       .toolbar > div span.shutdown {
         background-image: url("../images/icons/shutdown_active.svg");
         background-repeat: no-repeat;
-        margin-left: 5px; }
+        margin: 4px 0 0 5px; }
         .toolbar > div span.shutdown:hover {
           background-image: url("../images/icons/shutdown_hover.svg"); }
   .toolbar .tool-text {
@@ -1664,14 +1664,14 @@ input[type="number"] {
   .toolbar .st-st {
     min-width: 100px; }
   .toolbar .start-stop {
-    padding-left: 10px;
+    padding: 1px 0 0 10px;
     width: 85px; }
   .toolbar .shutdown-parent {
     float: right;
     width: 45px;
     padding-right: 50px; }
   .toolbar .toolbar-functions {
-    padding: 2px 0; }
+    padding: 1px 0; }
   .toolbar .system-status-text {
     margin-top: 14px;
     padding: 0 20px;
@@ -1679,9 +1679,9 @@ input[type="number"] {
   .toolbar .syntax-status {
     background-image: url("../images/icons/syntax_pending.svg");
     background-repeat: no-repeat;
-    margin-top: 3px;
+    margin-top: 4px;
     min-width: 100px;
-    padding: 0 20px; }
+    padding: 1px 20px 0; }
     .toolbar .syntax-status.pending {
       background-image: url("../images/icons/syntax_pending.svg");
       background-repeat: no-repeat; }
