--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1582,12 +1582,12 @@ input[type="number"] {
             transform: rotate(360deg); } }
 
 .running-button {
-  -webkit-animation: running-button 2s linear infinite;
-          animation: running-button 2s linear infinite; }
+  -webkit-animation: running-button .75s linear infinite;
+          animation: running-button .75s linear infinite; }
 
 .building-button {
-  -webkit-animation: running-button 3s linear infinite;
-          animation: running-button 3s linear infinite; }
+  -webkit-animation: running-button 2s linear infinite;
+          animation: running-button 2s linear infinite; }
 
 .toolbar {
   background: #c9c9c9;
@@ -1597,7 +1597,7 @@ input[type="number"] {
   display: block;
   font-family: inconsolata, monospace;
   font-size: 12px;
-  height: 42px;
+  height: 43px;
   left: 0;
   padding-left: 40px;
   position: absolute;
@@ -1606,12 +1606,12 @@ input[type="number"] {
   .toolbar > div {
     display: inline;
     float: left;
-    height: 35px; }
+    height: 35px;
+    margin-top: 3px; }
     .toolbar > div span {
       cursor: pointer;
       display: inline-block;
       height: 35px;
-      margin-top: 3px;
       -webkit-transition: 0.1s ease-in-out;
       transition: 0.1s ease-in-out;
       width: 35px; }
@@ -1626,8 +1626,7 @@ input[type="number"] {
           background-image: url("../images/icons/run_running.svg"); }
       .toolbar > div span.stop {
         background-image: url("../images/icons/stop_active.svg");
-        background-repeat: no-repeat;
-        margin-left: 5px; }
+        background-repeat: no-repeat; }
         .toolbar > div span.stop:hover {
           background-image: url("../images/icons/stop_inactive.svg"); }
       .toolbar > div span.console-button {
@@ -1649,7 +1648,7 @@ input[type="number"] {
       .toolbar > div span.shutdown {
         background-image: url("../images/icons/shutdown_active.svg");
         background-repeat: no-repeat;
-        margin: 4px 0 0 5px; }
+        margin: 1px 0 0 5px; }
         .toolbar > div span.shutdown:hover {
           background-image: url("../images/icons/shutdown_hover.svg"); }
   .toolbar .tool-text {
