FIX: List Project Child Directory Contents - I've had to actually extend quite a lot of the fole and project management files to accomodate the functionality expected from inline list buttons as well as removing the ability to arbitrarily add a folder by having a slash (or series of slashes) in a filename. This limits the folder depth to 1.

--- a/ide-redesign/styles/_example-list.scss
+++ b/ide-redesign/styles/_example-list.scss
@@ -10,3 +10,14 @@ ul {
     }
   }
 }
+
+.example-list > li {
+	padding: 4px 10px;
+	&:before {
+    content: '>';
+		margin-right: 10px;
+	}
+	&:hover {
+		background: rgba(255, 255, 0, 0.2);
+	}
+}
