--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -96,6 +96,10 @@ hr {
   padding-top: 10px;
 }
 
+ul {
+	font-family: inconsolata;
+}
+
 @import 'accordion-menu';
 @import 'buttons';
 @import 'slider';
