FEAT: Large File Uploads - barebones but functional. Have tested up to half gigabyte. Have also added visual signifiers for drag and drop files, again that's a placeholder as well.
(cherry picked from commit 8394b56489a148dbbdbf02b56b0cd1f3a6837f68)

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1214,6 +1214,10 @@ ul dl {
   top: 0;
   width: 100vw;
   z-index: 9998; }
+  #overlay.active.drag-upload {
+    background: rgba(0, 255, 122, 0.3); }
+    #overlay.active.drag-upload.no {
+      background: rgba(255, 0, 0, 0.3); }
 
 ::-webkit-scrollbar {
   width: 12px; }
