--- a/ide-redesign/styles/_popup.scss
+++ b/ide-redesign/styles/_popup.scss
@@ -134,5 +134,11 @@
     top: 0;
     width: 100vw;
     z-index: 9998;
+    &.drag-upload {
+      background: rgba(0, 255, 122, 0.3);
+      &.no {
+        background: rgba(255, 0, 0, 0.3);
+      }
+    }
   }
 }
