--- a/ide-redesign/styles/_scope.scss
+++ b/ide-redesign/styles/_scope.scss
@@ -115,6 +115,7 @@ button.scope-controls {
   font-family: inconsolata;
   font-size: 1em;
   line-height: .5em;
+  -moz-appearance: textfield;
   text-align: right;
   width: 2.5em;
   &::-webkit-inner-spin-button {
