Fixup that was missing from (not) cherry-picking c15b120f9a22a9ddefdf114761010fda9311992a

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -110,6 +110,12 @@ hr {
   display: block;
   padding-top: 10px; }
 
+body.uploading {
+  cursor: progress; }
+  body.uploading button.submit {
+    opacity: 0.75 !important;
+    cursor: auto !important; }
+
 button.accordion {
   background-color: #f1f1f1;
   border: none;
