FEAT: Large File Uploads Rebased - User now receives an error message asking to retry if no file is selected.

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1143,6 +1143,8 @@ ul dl {
     color: #00bea4;
     font-size: 2em;
     font-family: space_bold; }
+    #popup h1.error {
+      color: #ff5e5b; }
   #popup h3 {
     color: rgba(0, 0, 0, 0.8);
     font-size: 1em;
