--- a/ide-redesign/styles/_buttons.scss
+++ b/ide-redesign/styles/_buttons.scss
@@ -12,6 +12,7 @@ button,
   border: 1px solid $teal-main;
   background-color: $white;
   border-radius: 3px;
+  color: $black;
   font-size: .8em;
   cursor: pointer;
   font-family: poppins_light;
