--- a/ide-redesign/styles/_file-list.scss
+++ b/ide-redesign/styles/_file-list.scss
@@ -17,6 +17,7 @@
     .source-file,
     .source-text {
       cursor: pointer;
+      list-style: none;
       padding: 2px 0;
       text-indent: 22px;
     }
