--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -817,8 +817,10 @@ ul.projectManager {
   .file-list p {
     border-bottom: 1px solid #bdbdbd;
     margin: 0;
-    padding: 3px 0 3px 10px;
+    padding: 0 0 3px 10px;
     width: calc(100% - 10px); }
+  .file-list ul {
+    padding-bottom: .5em; }
   .file-list:first-child > p {
     margin: -5px 0 0 0; }
   .file-list .file-list-size {
