FIX: Tab Sidebar Click Deselect Current Icon - When the user clicked just outside a tab icon there were some strange behaviours with selection. This was because the user could click on the href inside the list item which was less than ideal. Have now made that impossible.

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1543,7 +1543,8 @@ p.project {
  *
  */
 #tab-menu li#open-tab {
-  background-color: #c9c9c9; }
+  background-color: #c9c9c9;
+  padding-left: 10px; }
 
 #tab-menu li {
   background: #c9c9c9;
@@ -1630,7 +1631,6 @@ p.project {
   font-weight: bolder;
   margin: 0;
   line-height: 50px;
-  padding-left: 10px;
   text-decoration: none; }
 
 .tab-content-area {
