FEAT: Remove Hover Styling from Specific Console Error - If an error relating to things such as the including of a header in a deprecated manner as depicted in the original issue then there should be no misleading underline and hover effects on the console.

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -475,7 +475,13 @@ input[type="range"].range-slider {
   transition: transform 0.1s ease-out;
   transition: transform 0.1s ease-out, -webkit-transform 0.1s ease-out; }
 
-.beaglert-console-ierror > span:hover, .beaglert-console-iwarning > span:hover {
+.beaglert-console-ierror > span.no-hover:hover,
+.beaglert-console-iwarning > span.no-hover:hover {
+  cursor: default;
+  text-decoration: none; }
+
+.beaglert-console-ierror > span:hover,
+.beaglert-console-iwarning > span:hover {
   cursor: pointer;
   text-decoration: underline; }
 
