FEAT: Libraries Open Example - Finished up Giulio's branch. Works great, only adds exmples if they're present in the lib.metadata file, must be in the format of `examples=one, two, three`

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -988,7 +988,7 @@ ul.libraries-list-parent {
     font-family: inconsolata;
     font-size: 14px;
     padding: 4px 12px; }
-    ul.libraries-list-parent .libraries-list li:hover, ul.libraries-list-parent .libraries-list li.selected {
+    ul.libraries-list-parent .libraries-list li:hover, ul.libraries-list-parent .libraries-list li.selected, ul.libraries-list-parent .libraries-list li.selectedExample {
       background: rgba(255, 255, 0, 0.2); }
     ul.libraries-list-parent .libraries-list li:before {
       content: '>';
