--- a/ide-redesign/styles/_library-list.scss
+++ b/ide-redesign/styles/_library-list.scss
@@ -74,7 +74,8 @@ ul {
       	font-size: 14px;
       	padding: 4px 12px;
         &:hover,
-        &.selected {
+        &.selected,
+        &.selectedExample {
       		background: rgba(255, 255, 0, 0.2);
       	}
       	&:before {
