FIX: Tab Menu Max Width - Noticed that the previous fix for the tab menu didn't take into account the top open menu item, this fixes that oversight

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1560,6 +1560,7 @@ p.project {
  */
 #tab-menu li#open-tab {
   background-color: #c9c9c9;
+  max-width: 40px;
   padding-left: 10px; }
 
 #tab-menu li {
