Added a style for smaller subtext

--- a/IDE/frontend-dev/design/styles/_popup.scss
+++ b/IDE/frontend-dev/design/styles/_popup.scss
@@ -103,6 +103,10 @@
     opacity: 1;
   }
 
+  .create_file_subtext {
+    font-size: .8em;
+  }
+
   /* Styles for custom UI buttons for popups */
   button {
     float: right;
