--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1217,6 +1217,8 @@ ul dl {
   #popup .radio-container input:checked ~ .radio-button {
     background-color: #1ce8b5;
     opacity: 1; }
+  #popup .create_file_subtext {
+    font-size: .8em; }
   #popup button {
     float: right;
     font-size: 1em;
@@ -1996,7 +1998,7 @@ input[type="range"].scope-range-slider {
     width: 12px; }
   input[type="range"].scope-range-slider:hover::-moz-range-track, input[type="range"].scope-range-slider:active::-moz-range-track {
     background: #1ce8b5;
-    -webkit-transition: background, 100ms, ease-in-out;
+    -moz-transition: background, 100ms, ease-in-out;
     transition: background, 100ms, ease-in-out; }
   input[type="range"].scope-range-slider:hover::-webkit-slider-runnable-track, input[type="range"].scope-range-slider:active::-webkit-slider-runnable-track {
     background: #1ce8b5;
