--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -721,7 +721,7 @@ select.dropdown-num {
   padding-left: 10px;
   background: transparent;
   font-family: poppins_light;
-  -webkit-appearance: button;
+  -webkit-appearance: none;
   vertical-align: center; }
   .mini-dropdown select option {
     width: 100%; }
@@ -1996,7 +1996,7 @@ input[type="range"].scope-range-slider {
     width: 12px; }
   input[type="range"].scope-range-slider:hover::-moz-range-track, input[type="range"].scope-range-slider:active::-moz-range-track {
     background: #1ce8b5;
-    -webkit-transition: background, 100ms, ease-in-out;
+    -moz-transition: background, 100ms, ease-in-out;
     transition: background, 100ms, ease-in-out; }
   input[type="range"].scope-range-slider:hover::-webkit-slider-runnable-track, input[type="range"].scope-range-slider:active::-webkit-slider-runnable-track {
     background: #1ce8b5;
