--- a/IDE/frontend-dev/design/styles/_tab-content.scss
+++ b/IDE/frontend-dev/design/styles/_tab-content.scss
@@ -66,6 +66,7 @@ input[type="checkbox"].checkbox-slider,
   left: 5px;
   position: relative;
   width: 18px;
+  -moz-appearance: none !important;
 
   &::before, &::after {
     content: '';
