FEAT: IDE Source List Improvement - I was uploading some files with long names and I was frustrated by how it looked so I've added CSS truncation for long names as well as a title for hovering so you can tell what the file name is when you hover.

--- a/IDE/frontend-dev/design/styles/_file-list.scss
+++ b/IDE/frontend-dev/design/styles/_file-list.scss
@@ -38,6 +38,14 @@
     }
     .source-text {
       position: relative;
+      .source-text-name {
+        display: inline-block;
+        overflow: hidden;
+        text-align: left;
+        text-indent: 0;
+        text-overflow: ellipsis;
+        width: 70%;
+      }
     }
     &.is-dir {
       .source-file {
