--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -848,6 +848,13 @@ ul.projectManager {
       top: 5px; }
   .file-list .section .source-text {
     position: relative; }
+    .file-list .section .source-text .source-text-name {
+      display: inline-block;
+      overflow: hidden;
+      text-align: left;
+      text-indent: 0;
+      text-overflow: ellipsis;
+      width: 70%; }
   .file-list .section.is-dir .source-file:hover {
     background-color: inherit; }
   .file-list .section.is-dir .source-file > .source-text {
@@ -1996,7 +2003,7 @@ input[type="range"].scope-range-slider {
     width: 12px; }
   input[type="range"].scope-range-slider:hover::-moz-range-track, input[type="range"].scope-range-slider:active::-moz-range-track {
     background: #1ce8b5;
-    -webkit-transition: background, 100ms, ease-in-out;
+    -moz-transition: background, 100ms, ease-in-out;
     transition: background, 100ms, ease-in-out; }
   input[type="range"].scope-range-slider:hover::-webkit-slider-runnable-track, input[type="range"].scope-range-slider:active::-webkit-slider-runnable-track {
     background: #1ce8b5;
