--- a/IDE/frontend-dev/design/styles/_popup.scss
+++ b/IDE/frontend-dev/design/styles/_popup.scss
@@ -38,6 +38,9 @@
     color: $teal-main;
     font-size: 2em;
     font-family: space_bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
     &.error {
       color: $accent-red;
     }
