--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1163,7 +1163,11 @@ ul dl {
   #popup h1 {
     color: #00bea4;
     font-size: 2em;
-    font-family: space_bold; }
+    font-family: space_bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    white-space: nowrap; }
     #popup h1.error {
       color: #ff5e5b; }
   #popup h3 {
