--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1860,7 +1860,9 @@ button.scope-controls {
   padding: 2em 0 2em 2em;
   position: absolute;
   top: 55px;
-  z-index: 9999; }
+  z-index: 9999;
+  overflow-y: auto;
+  height: calc(100vh - (55px + 2*2em + 2*1px)); }
   #control-panel * {
     -webkit-user-select: none;
        -moz-user-select: none;
