--- a/IDE/frontend-dev/scss/_tab-content.scss
+++ b/IDE/frontend-dev/scss/_tab-content.scss
@@ -60,6 +60,11 @@ input[type="number"].number-picker {
   margin: 0 -3px 0 -4px;
 }
 
+textarea {
+  width: 100%;
+  resize: vertical;
+}
+
 input[type="checkbox"].checkbox-slider,
 .checkbox-slider input[type="checkbox"] {
   height: 18px;
