--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1386,6 +1386,10 @@ input[type="number"].number-picker {
           box-sizing: border-box;
   margin: 0 -3px 0 -4px; }
 
+textarea {
+  width: 100%;
+  resize: vertical; }
+
 input[type="checkbox"].checkbox-slider,
 .checkbox-slider input[type="checkbox"] {
   height: 18px;
