--- a/IDE/public/belaDiagram/css/diagramStyle.css
+++ b/IDE/public/belaDiagram/css/diagramStyle.css
@@ -67,6 +67,11 @@
   stroke: none;
 }
 
+.audioout {
+  fill: rgba(255, 255, 125, 0.5);
+  stroke: none;
+}
+
 .pins{
   fill: transparent;
   stroke: #000;
